cambios en gral

--- a/CarroselGral.html
+++ b/CarroselGral.html
@@ -43,9 +43,9 @@
 
 </body>
 <footer >
-        <imput class="logos"><i class="fa-brands fa-square-instagram"></i> </imput>
-        <imput class="logos"><i class="fa-brands fa-linkedin"></i></imput>
-        <imput class="logos"><i class="fa-brands fa-facebook"></i></imput>
-        <imput class="logos"><i class="fa-brands fa-whatsapp"></i></imput>
+        <imput class="logos"><a href="https://www.instagram.com/"><i class="fa-brands fa-square-instagram"></i></a></imput>
+        <imput class="logos"><a href="https://www.linkedin.com/"><i class="fa-brands fa-linkedin"></i></a></imput>
+        <imput class="logos"><a href="https://es-la.facebook.com/"><i class="fa-brands fa-facebook"></i></a></imput>
+        <imput class="logos"><a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp"></i></a></imput>
     </footer>
 </html>
