cambios en menu hamburguesa y link a index

--- a/pag/logros.html
+++ b/pag/logros.html
@@ -4,40 +4,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/css/styles.css" rel="stylesheet">
+    <link href="../css/styles.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/ab05c0d697.js" crossorigin="anonymous"></script>
     <title>CarroselGral</title>
 </head>
 <body>
 
 <!--Titulo-->
-<h1>Adrian Santillan - Business Advisor </h1>
+<br>
+<a href="../pag/Index.html"> <h1>Adrian Santillan - Business Advisor </h1></a>
+<br>
 
-    <!--Barra de navegación-->    
-    <nav>
-        <div class="barraNav">
+       <!--Barra de navegación-->    
+   <nav>
+    <div class="barraNav">
 
-                <a href="/pag/Index.html" class="selected">
-                        <h4>Index</h4>
-                </a>
+            <a href="../pag/Index.html"><i class="fa-solid fa-bars"></i></a>
 
-                <a href="/pag/QuienSoy.html" class="selected">
-                    <h4>QuienSoy</h4>
-                </a>
+            <a href="../pag/Index.html" class="selected">
+                    <h4>Inicio</h4>
+            </a>
 
-                <a href="/pag/logros.html" class="selected">
-                    <h4>Logros</h4>
-                </a>
+            <a href="../pag/QuienSoy.html" class="selected">
+                <h4>QuienSoy</h4>
+            </a>
 
-                <a href="/pag/Proyectos.html" class="selected">
-                    <h4>Proyectos</h4>
-                </a>
-        
-                <a href="/pag/Contacto.html" class="selected">
-                        <h4>Contacto</h4>
-                </a> 
-        </div>
-    </nav>
+            <a href="../pag/logros.html" class="selected">
+                <h4>Logros</h4>
+            </a>
+
+            <a href="../pag/Proyectos.html" class="selected">
+                <h4>Proyectos</h4>
+            </a>
+    
+            <a href="../pag/Contacto.html" class="selected">
+                    <h4>Contacto</h4>
+            </a> 
+    </div>
+</nav>
 
     <br>
     <br>
